tests/compiler/errors/match_arm_binding_out_of_scope.casa
# expect: UNDEFINED_NAME

enum Maybe {
    Just (int)
    Nothing
}

fn use_other_arm m:Maybe {
    m match
        Maybe::Just(value) => { value drop }
        Maybe::Nothing => { value drop }
    end
}
42 Maybe::Just use_other_arm
